[project]
name = "DevQuest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ankit Anand", email = "ankit0.anand0@gmail.com"},
]
dependencies = ["jupyter>=1.1.1", "fastapi[all]>=0.115.13", "jupytext>=1.17.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
