[project]
name = "DevQuest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ankit Anand", email = "ankit0.anand0@gmail.com"},
]
dependencies = ["modusa>=0.3.1", "jupyter>=1.1.1", "ipykernel>=6.30.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
