[project]
name = "DevQuest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ankit Anand", email = "ankit0.anand0@gmail.com"},
]
dependencies = ["modusa>=0.3.42", "jupyter>=1.1.1", "ipykernel>=6.30.1", "praat-parselmouth>=0.4.6", "pyttsx3>=2.99", "sphinx==8.1.2", "sphinx-autodoc-typehints==2.1.0", "sphinx-copybutton>=0.5.2", "furo>=2024.8.6", "nbsphinx==0.9.7", "ghp-import>=2.1.0", "sounddevice>=0.5.2", "pyworld>=0.3.5", "pyreaper>=0.0.11", "matplotlib-venn>=1.1.2", "torchaudio==2.3.0", "torch>=2.3.0"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
